--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,8 +1,8 @@
 {
   "package": "com.slyfox.velabench",
   "name": "VelaBench性能测试",
-  "versionName": "1.0.1",
-  "versionCode": 2,
+  "versionName": "2.0.0",
+  "versionCode": 3,
   "minPlatformVersion": 1000,
   "icon": "/common/logo.png",
   "deviceTypeList": [
@@ -13,6 +13,7 @@
     { "name": "system.configuration" },
     { "name": "system.prompt" },
     { "name": "system.app" },
+    { "name": "system.file" },
     { "name": "system.device" }
   ],
   "config": {
@@ -27,9 +28,6 @@
       },
       "pages/detail": {
         "component": "detail"
-      },
-      "pages/about": {
-        "component": "about"
       }
     }
   }
