--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     ]
   },
   "devDependencies": {
-    "@aiot-toolkit/jsc": "^1.0.3",
+    "@aiot-toolkit/jsc": "^1.0.3"
+  },
+  "dependencies": {
+    "@aiot-toolkit/shared-utils": "^2.0.5",
     "aiot-toolkit": "^2.0.5"
   }
 }
